Bug 72582 - [swrast] piglit getteximage-targets S3TC 2D_ARRAY regression
Summary: [swrast] piglit getteximage-targets S3TC 2D_ARRAY regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-12-11 02:18 UTC by Vinson Lee
Modified: 2014-03-02 03:29 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-12-11 02:18:03 UTC
mesa: 00faf82832f3e6ef886abad246b50cc47b901c1f (master)

$ ./bin/getteximage-targets S3TC 2D_ARRAY -auto
Testing S3TC.
Testing GL_TEXTURE_2D_ARRAY
Mesa: User error: GL_INVALID_ENUM in glEnable(GL_TEXTURE_2D_ARRAY)
Unexpected GL error: GL_INVALID_ENUM 0x500
(Error at piglit/tests/texturing/getteximage-targets.c:200)
GetTexImage() returns incorrect data in byte 0 for layer 0
    corresponding to (0,0), channel 0
    expected: 8
    got: 255
PIGLIT: {'result': 'fail' }


2a3d1e2e06ce74801ccbfd349558d44653b9692f is the first bad commit
commit 2a3d1e2e06ce74801ccbfd349558d44653b9692f
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Wed Nov 20 13:48:36 2013 -0800

    mesa: Remove support for GL_MESA_texture_array
    
    This extension enabled the use of texture array with fixed-function and
    assembly fragment shaders.  No applications are known to use this
    extension.
    
    NOTE: This patch regresses GL_TEXTURE_1D_ARRAY and GL_TEXTURE_2D_ARRAY
    cases of the copyteximage piglit test.  The test is incorrectly using
    texture arrays with fixed function while only requiring the
    GL_EXT_texture_array extension.  A fix for the test has been posted to
    the piglit mailing list.
    
    http://lists.freedesktop.org/archives/piglit/2013-November/008639.html
    
    Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
    Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>
    Reviewed-by: Brian Paul <brianp@vmware.com>

:040000 040000 99d7bd3c175b693e834d947a36a8d1ea11cfe0df a011a5baee1e381e0e1a5f1cda20db5962dfdac9 M	docs
:040000 040000 f54fafb354f19bacb9cfafcbc033b438bbef059b 633fecfded34a7ce90393e6071f9b58d749db4ce M	src
bisect run success
Comment 1 Ian Romanick 2013-12-13 20:11:12 UTC
I haven't look at this test (and for some reason it doesn't show up in my piglit runs), but I suspect this is the same issue at the copyteximage test.  copyteximage tries to use array textures with fixed-function, but that's not allowed.  Does "getteximage-targets S3TC 2D_ARRAY" pass on other GL implementations?
Comment 2 Ian Romanick 2013-12-13 20:20:27 UTC
Nope.  The problem is in meta.  I'll see if I can come up with a fix.
Comment 3 Vinson Lee 2014-03-02 03:29:54 UTC
mesa: fc25956badb8e1932cc19d8c97b4be16e92dfc65 (master 10.2.0-devel)

getteximage-targets S3TC 2D_ARRAY is passing on swrast now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.